--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "godotTools.editorPath.godot4": "c:\\Users\\Claire\\OneDrive\\Desktop\\kyle work\\Godot\\Godot_v4.6.1-stable_win64.exe"
+    "godotTools.editorPath.godot4": "z:\\Desktop\\Godot_v4.6-stable_win64.exe"
 }
